# aetheria_old

./: .gitmodules  Cargo.toml  ]
aether/: Cargo.toml
aether/src/: lib.rs  renderer.rs  vulkan.rs
aether/src/ecs/: mod.rs
aether/src/fs/: amesh.rs  aproject.rs  gltf.rs  mod.rs
aether/src/fs/gltf/: json.rs  mod.rs
aether/src/prelude/: math.rs
aether/src/renderer/: material.rs  mesh.rs  mod.rs  renderer.rs
aether/src/types/: mesh.rs
aether/src/vulkan/: context.rs  device.rs  image.rs  instance.rs  mod.rs  shader.rs  vertex.rs
arbiter/: Cargo.toml  test.amesh  test.aproject
arbiter/src/: main.rs
