[package]
name = "aether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.30.0"
vulkano-win = "0.30.0"
vulkano-shaders = "0.30.0"
winit = "0.26.0"
shaderc = "0.8.0"
cstr = "0.2.10"
eyre = "0.6.8"
bytemuck = "1.11.0"
ciborium = "0.2.0"
serde = "1.0.143"
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
nalgebra-glm = "0.17.0"
nalgebra = "0.31.1"
num-derive = "0.2"
num-traits = "0.2"
